# Poros

./: .gitignore  README.md  build.sh  copy_files.sh  start.sh
.github/workflows/: build.yml
cli/: .gitignore  Cargo.toml
cli/src/: main.rs  utils.rs
core/: .gitignore  CMakeLists.txt  build.sh
core/src/: atrace_func_hook.cpp  atrace_func_hook.h  constants.h  injection.cpp  injection.h  main.cpp  runtime.cpp  runtime.h
core/src/base/: file_utils.cpp  file_utils.h  got_hook.cpp  got_hook.h  logging.h  scoped_fake_dlopen.h  utils.cpp  utils.h
core/src/dlfcn/: fake_dlfcn.c  fake_dlfcn.h
core/src/jni/: jni_help.cpp  jni_help.h
core/src/looper/: ThreadLooper.cpp  ThreadLooper.h
injector/: source.txt
injector/arm64-v8a/: linjector-cli  xinjector
injector/armeabi-v7a/: xinjector
xposed_loader/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
xposed_loader/app/: build.gradle  proguard-rules.pro
xposed_loader/app/src/main/java/com/storm/wind/xposed/: XposedTestApplication.java
xposed_loader/core/: build.gradle
xposed_loader/core/libs/: hooklib.aar
xposed_loader/core/src/main/: AndroidManifest.xml
xposed_loader/core/src/main/java/com/wind/xposed/entry/: SandHookInitialization.java  StatisticReport.java  XposedModuleEntry.java  XposedModuleLoader.java
xposed_loader/core/src/main/java/com/wind/xposed/entry/hooker/: PackageSignatureHooker.java
xposed_loader/core/src/main/java/com/wind/xposed/entry/reflect/: MethodParams.java  MethodReflectParams.java  RefBoolean.java  (+13 more)
xposed_loader/gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
